<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="700dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView5">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/writersOfTheWeek"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>

            <ImageView
                android:id="@+id/user1Image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/user6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15"></ImageView>

            <TextView
                android:id="@+id/user1TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/wowUser1"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/user1Image"
                app:layout_constraintStart_toStartOf="@+id/user1Image"
                app:layout_constraintTop_toBottomOf="@+id/user1Image"></TextView>

            <ImageView
                android:id="@+id/user2Image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/user2"
                app:layout_constraintEnd_toStartOf="@+id/user3Image"
                app:layout_constraintStart_toEndOf="@+id/user1Image"
                app:layout_constraintTop_toBottomOf="@+id/textView15"></ImageView>

            <TextView
                android:id="@+id/user2TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/wowUser2"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/user2Image"
                app:layout_constraintStart_toStartOf="@+id/user2Image"
                app:layout_constraintTop_toBottomOf="@+id/user2Image"></TextView>

            <ImageView
                android:id="@+id/user3Image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:src="@drawable/user4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15"></ImageView>

            <TextView
                android:id="@+id/user3TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/wowUser3"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/user3Image"
                app:layout_constraintStart_toStartOf="@+id/user3Image"
                app:layout_constraintTop_toBottomOf="@+id/user3Image"></TextView>

            <ImageView
                android:id="@+id/user4Image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/user1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user1TextView"></ImageView>

            <TextView
                android:id="@+id/user4TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/wowUser4"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/user4Image"
                app:layout_constraintStart_toStartOf="@+id/user4Image"
                app:layout_constraintTop_toBottomOf="@+id/user4Image"></TextView>

            <ImageView
                android:id="@+id/user5Image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/user3"
                app:layout_constraintEnd_toStartOf="@+id/user3Image"
                app:layout_constraintStart_toEndOf="@+id/user1Image"
                app:layout_constraintTop_toBottomOf="@+id/user2TextView"></ImageView>

            <TextView
                android:id="@+id/user5TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/wowUser5"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/user5Image"
                app:layout_constraintStart_toStartOf="@+id/user5Image"
                app:layout_constraintTop_toBottomOf="@+id/user5Image"></TextView>

            <ImageView
                android:id="@+id/user6Image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:src="@drawable/user5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user3TextView"></ImageView>

            <TextView
                android:id="@+id/user6TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/wowUser6"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/user6Image"
                app:layout_constraintStart_toStartOf="@+id/user6Image"
                app:layout_constraintTop_toBottomOf="@+id/user6Image"></TextView>


            <ImageView
                android:id="@+id/user7Image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/user7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user4TextView"></ImageView>

            <TextView
                android:id="@+id/user7TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/wowUser7"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/user7Image"
                app:layout_constraintStart_toStartOf="@+id/user7Image"
                app:layout_constraintTop_toBottomOf="@+id/user7Image"></TextView>

            <ImageView
                android:id="@+id/user8Image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/user8"
                app:layout_constraintEnd_toStartOf="@+id/user9Image"
                app:layout_constraintStart_toEndOf="@+id/user7Image"
                app:layout_constraintTop_toBottomOf="@+id/user4TextView"></ImageView>

            <TextView
                android:id="@+id/user8TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/wowUser8"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/user8Image"
                app:layout_constraintStart_toStartOf="@+id/user8Image"
                app:layout_constraintTop_toBottomOf="@+id/user8Image"></TextView>

            <ImageView
                android:id="@+id/user9Image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:src="@drawable/user9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user4TextView"></ImageView>

            <TextView
                android:id="@+id/user9TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/wowUser9"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/user9Image"
                app:layout_constraintStart_toStartOf="@+id/user9Image"
                app:layout_constraintTop_toBottomOf="@+id/user9Image"></TextView>

            <ImageView
                android:id="@+id/advertBoard"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                android:src="@color/gold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user8TextView" />

            <ImageView
                android:id="@+id/user10Image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/user10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/advertBoard"></ImageView>

            <TextView
                android:id="@+id/user10TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/wowUser10"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/user7Image"
                app:layout_constraintStart_toStartOf="@+id/user7Image"
                app:layout_constraintTop_toBottomOf="@+id/user10Image"></TextView>

            <ImageView
                android:id="@+id/user11Image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/user11"
                app:layout_constraintEnd_toStartOf="@+id/user12Image"
                app:layout_constraintStart_toEndOf="@+id/user10Image"
                app:layout_constraintTop_toBottomOf="@+id/advertBoard"></ImageView>

            <TextView
                android:id="@+id/user11TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/wowUser11"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/user11Image"
                app:layout_constraintStart_toStartOf="@+id/user11Image"
                app:layout_constraintTop_toBottomOf="@+id/user11Image"></TextView>

            <ImageView
                android:id="@+id/user12Image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:src="@drawable/user12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/advertBoard"></ImageView>

            <TextView
                android:id="@+id/user12TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/wowUser12"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/user12Image"
                app:layout_constraintStart_toStartOf="@+id/user12Image"
                app:layout_constraintTop_toBottomOf="@+id/user12Image"></TextView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:src="@color/plum"
                app:layout_constraintTop_toBottomOf="@+id/user11TextView" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>